--- a/BulkyWeb/Areas/Admin/Views/Product/Delete.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Product
-<div class="card shadow border-0 mt-4">
+<div class="card shadow border-0 my-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
     <div class="row">
         <div class="col-12 text-center">
@@ -16,7 +16,7 @@
                     <label asp-for="Title" class="ms-2"></label>
         </div>
         <div class="form-floating py-2 col-12" >
-                    <textarea asp-for="Description" class="form-control border-0 shadow" ></textarea>
+                    <textarea asp-for="Description" disabled class="form-control border-0 shadow" ></textarea>
                     <label asp-for="Description" class="ms-2"></label>
         </div>
         <div class="form-floating py-2 col-12">
@@ -49,7 +49,7 @@
                         <button type="submit" class="btn btn-danger form-control">Delete</button>
                     </div>
                     <div class="col-6 col-md-3">
-                        <a asp-controller="Category" asp-action="Index" class="btn btn-secondary border  form-control">
+                        <a asp-controller="Product" asp-action="Index" class="btn btn-secondary border  form-control">
                             Back to List
                         </a>
                     </div>
