--- a/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -13,13 +13,13 @@
             <div class="col-6">
             </div>
             <div class="col-6 text-end">
-                <a asp-controller="Product" asp-action="Create" class="btn btn-primary">
+                <a asp-controller="Product" asp-action="Upsert" class="btn btn-primary">
                     <i class="bi bi-plus-circle"></i>  Create New Product
                 </a>
             </div>
         </div>
 
-        <table class="table table-bordered table-striped">
+        <table id="tblData" class="table table-bordered table-striped">
             <thead>
                 <tr>
                     <th>Title</th>
@@ -30,7 +30,7 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody>
+@*            <tbody>
                 @foreach (var obj in Model)
                 {
                         <tr>
@@ -45,11 +45,11 @@
                             @obj.Author
                             </td>
                             <td>
-                            @*@obj.Category*@
+                            @obj.Category.Name
                              </td>
                                 <td>
                                     <div class="w-75 btn-group" role="group">
-                                        <a asp-controller="Product" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                        <a asp-controller="Product" asp-action="Upsert" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                             <i class="bi bi-pencil-square"></i> Edit
                                         </a>
                                         <a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
@@ -60,8 +60,11 @@
                         </tr>
                 }
             </tbody>
-        </table>
+*@        </table>
 
     </div>
 </div>
 
+@section Scripts{
+    <script src="~/js/product.js"></script>
+}
